# codes

./: LICENSE
cppcodes/: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
cppcodes/cppcodes/: CMakeLists.txt  cppcodes.cpp  cppcodes.h  http.hpp  imgui.ini  strings.cpp  strings.ixx  ui.h  ui.hpp
cppcodes/cppcodes/learn/: basic_types.hpp
cppcodes/enc_temp_folder/5640cff28371e67c3962f5cb63167437/: cppcodes.cpp
cppcodes/enc_temp_folder/9dfad717375c2c08f942371d848afd/: cppcodes.cpp
gocodes/: basic.go  collection.go  main.go  struct.go
pycodes/: main.py  pyproject.toml
rustcodes/: Cargo.toml
rustcodes/src/: l11_advanced.rs  l1_basics.rs  l2_ownership_references_borrowing.rs  l3_structs.rs  main.rs
swiftcodes/: Package.swift  README.md
swiftcodes/Sources/swiftcodes/: collections.swift  controflow.swift  functions.swift  main.swift
