[tool.poetry]
name = "pycodes"
version = "0.1.0"
description = ""
authors = ["shihai5 <shihai@pandu.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.2"
scipy = "^1.9.1"
opencv-python = "^4.6.0.66"
Pillow = "^9.2.0"
pendulum = "^2.1.2"
dearpygui = "^1.6.2"
mss = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
